--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,26 +25,9 @@ header{
     text-align: center;  
     width: 100%;
     background-color: #f0aa40d3 ;
-    border-style: ridge;
-    border-color: rgb(255, 176, 4);
+    border-style: double;
     margin-top: 1%;
     margin-bottom: 1% ;
-}
-.header__nav__enlace{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    background-color: rgba(255, 255, 255, 0.918);
-    border-style: solid;
-    font-family: 'Work Sans', sans-serif;
-    font-style: italic;
-    font-size: large;
-    cursor: pointer;
-    border-radius: 50px;
-
 }
 header nav ul{
     display: flex;
@@ -52,140 +35,49 @@ header nav ul{
     justify-content: center;
     align-items: center;
 }
+.header__nav__enlace{
+    display: inline-flex;
+	align-items: center;
+    padding: auto;
+    text-decoration: none;
+	justify-content: center;
+    margin: auto;
+    height: 1%;
+	background: #F9FFED ;
+	color: black;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	border-style: solid;
+	cursor: pointer;
+	transition: .3s ease all;
+	border-radius: 5px;
+	position: relative;
+	overflow: hidden;
+}
 header nav ul li{
     margin:none;
     padding:1%;
 }
-.titulosWara{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    text-align: center;
-    font-family: 'Mochiy Pop One', sans-serif;
-    border-style: solid;
-    margin: 3%;
-    padding: 2%;
-    justify-content: space-between;
+.header__nav__enlace::after {
+	content: "";
+	width: 1px;
+	height: 1px;
+	background: none;
+	position: absolute;
+	z-index: 1;
+	top: 50%;
+	left: 50%;
+	transition: .3s ease-in-out all;
+	border-radius: 100px;
+	transform-origin: center;
 }
-.cuadro{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 40% 40%;
-    place-content: center;
+.header__nav__enlace:hover::after {
+	transform: scale(200);
+	background: #f0aa40;
 }
-.cuadroTexto{
-    margin-left:10%;
-    padding: 1%;
-    width: 90%;
-    border-style: solid;
-    font-style: italic;
-    font-weight:bolder;
-    font-size: 20px;
-    text-indent: 20px;
-    font-family: 'Roboto', sans-serif;
-    color: black;
-    background-color: #ced4da;
-    line-height: 40px;
-    } 
-.imgWara{
-    margin: 1%;
-    margin-bottom: 1%;
-    justify-content: space-between;
-    transform: translateX(20%);
-}
-.redesSociales{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 5%;
-    margin-bottom: 1%;
-    max-height: 50%;
-    text-align: center;
-}
-.animate__animated.animate__pulse{
-    animation-iteration-count: infinite;
-    animation-duration: 2s;
-}
-footer{
-    background-color: #f0aa40d3 ;
-    border-style: ridge;
-    border-color: rgb(255, 176, 4);
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: 1%;
-}
-
-/* ----- Html - Recetas ----- */
-
-.cuerpoTarjeta{
-    width: 95%;
-    margin: 1%;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: 30% 30% 30%;
-    place-content: center;
-}
-.tarjeta{
-    background-color: #f0aa40d3 ;
-    border-style:double;
-    border-color: black;
-    margin: 3%;
-    padding: 2%;
-    font-family: 'Roboto', sans-serif;
-    font-weight:normal;
-    font-size:medium;
-    text-align: center;
-}
-/* ----- Responsive - Celular ----- */
-@media screen and (min-width: 320px) and (max-width: 768px){
-    body{
-        width: 100%;
-        height: 100%;
-    }
-    header nav ul{
-        display: flex;
-        flex-direction: column;
-    }
-    .logo{
-        width: 70%;
-        height: 70%;
-    }
-    .cuadro{ /* Index */
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        place-items: center;
-    }
-    .imgWara{
-        flex-wrap: nowrap;
-    }
-    .cuerpoTarjeta{ /* Recetas */
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        padding: auto;
-    }
-}
-/* ----- Responsive - Tablet -----*/
-@media screen and (min-width:769px) and (max-width:1020px){
-    body{
-        width: 100%;
-        height: 100%;
-    }
-    .logo{
-        width: 70%;
-        height: 70%;
-    }
-    .cuadro{ /* Index */
-        width: 80%;
-       display: flex;
-        flex-wrap: wrap;
-        place-items: center;
-    }
-    .cuerpoTarjeta{ /* Recetas */
-        display: flex;
-        flex-direction: column;
-    }
+.header__nav__enlace span {
+	position: relative;
+	z-index: 2;
+	transition: .3s ease all;
 }
