--- a/css/estilo.css
+++ b/css/estilo.css
@@ -121,7 +121,7 @@ footer{
     text-indent: 20px;
     font-family: 'Roboto', sans-serif;
     color: black;
-    background-color: #ced4da;
+    background-color: #ced4dac5;
     line-height: 40px;
 }
 .carousel {
@@ -163,4 +163,78 @@ footer{
     background-color: #ced4dac5;
     font-size: 20px;
     width: 90%;
+}
+
+/* --- Contacto ---*/
+.mapa{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight:bolder;
+    text-align: end;
+    line-height: 30px;
+    font-size: 27px;
+    margin: 2%;
+}
+.mapaDos{
+    margin-left: 10%;
+}
+.mapa p{
+    border-style: solid;
+    border-color: black;
+    padding: 2%;
+    margin-left: 20%;
+    background-color: #ced4dac5;
+}
+.tituloContacto{
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight:bolder;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 1%;
+    padding: 1%;
+    border-style: solid;
+    border-color: black;
+}
+.subtituloContacto{
+    display: flex;
+    margin-top: 1%;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight:900;
+}
+.tablaDeContacto{
+    display: grid;
+    grid-template-rows: 20%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight:bolder;
+    justify-content: center;
+}
+.empresaNombre{
+    margin-bottom: 1%;
+}
+.primerNombre{
+    margin-bottom: 1%;
+}
+.correoTelefono{
+    margin-bottom: 1%;
+}
+.direccion{
+    margin-bottom: 1%;
+}
+.enviar{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
 }
