--- a/css/estilo.css
+++ b/css/estilo.css
@@ -98,7 +98,7 @@ footer{
     justify-content: space-between;
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     padding: 1%;
 }
 .cuadro{
@@ -134,6 +134,7 @@ footer{
     display: flex;
     justify-content: center;
     margin-bottom: 2%;
+    margin-top: 2%;
 }
 .facebook{
     margin-right: 3%;
@@ -163,6 +164,16 @@ footer{
     background-color: #ced4dac5;
     font-size: 20px;
     width: 90%;
+}
+.pagination{
+    display: flex;
+    justify-content: center;
+}
+.recetasDos{
+    display: grid ;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto ;
+    place-content: center;
 }
 
 /* --- Contacto ---*/
@@ -237,4 +248,11 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: end;
+}
+
+/* --- Nuestros Productos --- */
+.table{
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-weight:bolder;
 }
