--- a/css/estilo.css
+++ b/css/estilo.css
@@ -273,8 +273,8 @@ footer{
 
 /* --- Responsive - Celular ---*/
 
-/*
-@media screen and (min-width: 320px) and (max-width: 768px){
+
+@media screen and (max-width: 768px){
     body{    
         width: 100%;
         height: 100%;
@@ -287,9 +287,7 @@ footer{
         width: 10%;
         height: 10%;
     }
-    }
-
-    /* --- Index --- /
+    /* --- Index --- */
     
     .cuadro{ 
         width: 80%;
@@ -307,16 +305,71 @@ footer{
         margin-bottom: 10%;
         transform: translateX(1%);
     }
-    /* --- Recetas --- /
+/* --- Recetas --- */
     
     .cuerpoTarjeta{ 
         display: flex;
         flex-direction: column;
         margin-left: 10%;
     }
+
+/* --- Recetas - Pagina 02 --- */
+
     .recetasDos{
         display: flex;
         flex-direction: column;
     }
+}
+
+ /*--- Responsive - Tablet --- */
+
+@media screen and (min-width:769px) and (max-width:1020px){
+    header nav ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    body{    
+        width: 100%;
+        height: 100%;
+    }
+    .logo{
+        width: 10%;
+        height: 10%;
+    }
+
+/* --- Index --- */
     
-     /*--- Responsive - Tablet --- */
+    .cuadro{ 
+        width: 80%;
+        margin-top: 1%;
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+        margin-left: 10%;
+        margin-top: 5%;
+    }
+    .carousel {
+        height: 10%;
+        width: 80%;
+        margin-top: 10%;
+        margin-bottom: 10%;
+        transform: translateX(1%);
+    }
+/* --- Recetas --- */
+    
+    .cuerpoTarjeta{ 
+        display: flex;
+        flex-direction: column;
+        margin-left: 10%;
+    }
+
+/* --- Recetas - Pagina 02 --- */
+
+    .recetasDos{
+        display: flex;
+        flex-direction: column;
+    }
+}
+/* --- Fin del Responsive --- */
