--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,70 +17,25 @@ body{
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
 }
 header{
-    text-align: center;  
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     width: 100%;
     background-color: #f0aa40d3 ;
     border-style: double;
     margin-top: 1%;
     margin-bottom: 1% ;
 }
-header nav ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.nav-item{
+    background-color: white;
+    border-style: solid;
+    border-color:black;
+    border-radius: 10px;
 }
-.header__nav__enlace{
-    display: inline-flex;
-	align-items: center;
-    padding: auto;
-    text-decoration: none;
-	justify-content: center;
-    margin: auto;
-    height: 1%;
-	background: #F9FFED ;
-	color: black;
-	font-family: 'Roboto', sans-serif;
-	font-size: 22px;
-	font-weight: 900 ;
-	border-style: solid;
-	cursor: pointer;
-	transition: .3s ease all;
-	border-radius: 5px;
-	position: relative;
-	overflow: hidden;
-}
-header nav ul li{
-    margin:none;
-    padding:1%;
-}
-.header__nav__enlace::after {
-	content: "";
-	width: 1px;
-	height: 1px;
-	background: none;
-	position: absolute;
-	z-index: 1;
-	top: 50%;
-	left: 50%;
-	transition: .3s ease-in-out all;
-	border-radius: 100px;
-	transform-origin: center;
-}
-.header__nav__enlace:hover::after {
-	transform: scale(200);
-	background: #f0aa40;
-}
-.header__nav__enlace span {
-	position: relative;
-	z-index: 2;
-	transition: .3s ease all;
-}
+
 .btn_wsp{
     position: fixed;
     width: 55px;
@@ -190,6 +145,7 @@ footer{
 }
 
 /* --- Contacto ---*/
+
 .mapa{
     display: grid;
     grid-template-columns: 50% 50%;
