--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,6 +17,8 @@ body{
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 }
 header{
