--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Roboto:wght@300&family=Work+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arimo&family=Ubuntu&display=swap");
+/* --- Variables --- */
+/* font-family: 'Arimo', sans-serif; */
+/* font-family: 'Ubuntu', sans-serif; */
 * {
   margin: 0;
   padding: 0;
@@ -29,7 +32,8 @@ header {
   background-color: #f0aa40d3;
   border-style: double;
   margin-top: 1%;
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+  font-family: Arimo; }
 
 .nav-item {
   background-color: white;
@@ -54,8 +58,7 @@ header {
 
 footer {
   background-color: #f0aa40d3;
-  border-style: ridge;
-  border-color: #ffb004;
+  border-style: solid;
   text-align: center;
   margin-top: auto;
   margin-bottom: 1%; }
@@ -69,7 +72,9 @@ footer {
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 2%;
-  padding: 1%; }
+  padding: 1%;
+  font-family: Arimo;
+  font-weight: 900; }
 
 .cuadro {
   margin: 3%;
@@ -85,11 +90,10 @@ footer {
   margin-bottom: 5%;
   width: 90%;
   border-style: solid;
-  font-style: italic;
   font-weight: bolder;
   font-size: 20px;
   text-indent: 20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu;
   color: black;
   background-color: #ced4dac5;
   line-height: 40px; }
@@ -122,7 +126,7 @@ footer {
   flex-direction: column;
   margin: 1%;
   border-style: solid;
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu;
   font-style: italic;
   font-weight: bolder;
   text-align: center;
@@ -145,7 +149,7 @@ footer {
 .mapa {
   display: grid;
   grid-template-columns: 50% 50%;
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu;
   font-style: italic;
   font-weight: bolder;
   text-align: end;
@@ -166,7 +170,7 @@ footer {
 .tituloContacto {
   display: flex;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu;
   font-style: italic;
   font-weight: bolder;
   margin-top: 5%;
@@ -181,7 +185,7 @@ footer {
   display: flex;
   margin-top: 1%;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: Ubuntu;
   font-style: italic;
   font-weight: 900; }
 
@@ -191,7 +195,7 @@ footer {
   margin-right: 20%;
   padding-top: 1%;
   padding-bottom: 1%;
-  font-family: 'Roboto', sans-serif;
+  font-family: .tablaDeContacto Ubuntu;
   font-style: italic;
   font-weight: bolder;
   justify-content: center; }
