cambio menor en css

--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ footer {
   margin-right: 20%;
   padding-top: 1%;
   padding-bottom: 1%;
-  font-family: .tablaDeContacto Ubuntu;
+  font-family:Ubuntu;
   font-style: italic;
   font-weight: bolder;
   justify-content: center; }
