Cambio de tipografia

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,5 +4,5 @@ $color-primario: #f0aa40d3 ;
 $color-secundario: #ced4dac5 ;
 $color-texto: black ;
 
-$tipografia-general: Arimo ; /* font-family: 'Arimo', sans-serif; */
-$tipografia-alternativa: Ubuntu ; /* font-family: 'Ubuntu', sans-serif; */
+$tipografia-general: 'Arimo', sans-serif; /* font-family: 'Arimo', sans-serif; */
+$tipografia-alternativa: 'Ubuntu', sans-serif; /* font-family: 'Ubuntu', sans-serif; */
