--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Arimo&family=Ubuntu&display=swap");
-/* --- Variables --- */
+@import url("https://fonts.googleapis.com/css2?family=Arimo&family=Ubuntu&display=swap"); /* --- Variables --- */
 /* font-family: 'Arimo', sans-serif; */
 /* font-family: 'Ubuntu', sans-serif; */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 ol {
-  list-style: none; }
+  list-style: none;
+}
 
 ul {
-  list-style-type: none; }
+  list-style-type: none;
+}
 
 body {
   background-image: url(../img/background.png);
@@ -20,26 +23,39 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  min-height: 100vh; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
+}
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   width: 100%;
-  background-color: #f0aa40d3;
+  background-color: rgba(240, 170, 64, 0.8274509804);
   border-style: double;
   margin-top: 1%;
   margin-bottom: 1%;
-  font-family: Arimo;
-  font-weight: bold; }
-  header .nav-item {
-    background-color: white;
-    border-style: solid;
-    border-color: black;
-    border-radius: 10px; }
+  font-family: "Arimo", sans-serif;
+  font-weight: bold;
+}
+header .nav-item {
+  background-color: white;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+}
 
 .btn_wsp {
   position: fixed;
@@ -53,123 +69,162 @@ header {
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
-  z-index: 100; }
+  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
 
 footer {
-  background-color: #f0aa40d3;
-  font-family: Arimo;
+  background-color: rgba(240, 170, 64, 0.8274509804);
+  font-family: "Arimo", sans-serif;
   border-style: solid;
   text-align: center;
   margin-top: auto;
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+}
 
 /* --- Index --- */
 .titulosWara {
   border-style: solid;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 2%;
   padding: 1%;
-  font-family: Arimo;
-  font-weight: 900; }
+  font-family: "Arimo", sans-serif;
+  font-weight: 900;
+}
 
 .cuadro {
   margin: 3%;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%; }
-  .cuadro .cuadroTexto h2 {
-    font-weight: 900; }
-  .cuadro .cuadroTexto {
-    padding: 1%;
-    margin-bottom: 5%;
-    width: 90%;
-    border-style: solid;
-    font-weight: bolder;
-    font-size: 20px;
-    text-indent: 20px;
-    font-family: Ubuntu;
-    color: black;
-    background-color: #ced4dac5;
-    line-height: 40px; }
+  grid-template-rows: 50% 50%;
+}
+.cuadro .cuadroTexto h2 {
+  font-weight: 900;
+}
+.cuadro .cuadroTexto {
+  padding: 1%;
+  margin-bottom: 5%;
+  width: 90%;
+  border-style: solid;
+  font-weight: bolder;
+  font-size: 20px;
+  text-indent: 20px;
+  font-family: "Ubuntu", sans-serif;
+  color: black;
+  background-color: rgba(206, 212, 218, 0.7725490196);
+  line-height: 40px;
+}
 
 .carousel {
   height: 100%;
   width: 60%;
   margin-top: 5%;
-  transform: translateX(35%); }
+  -webkit-transform: translateX(35%);
+          transform: translateX(35%);
+}
 
 .redesSociales {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 2%;
-  margin-top: 2%; }
+  margin-top: 2%;
+}
 
 .facebook {
-  margin-right: 3%; }
+  margin-right: 3%;
+}
 
 /* --- Recetas --- */
 .cuerpoTarjeta {
   display: grid;
   grid-template-columns: auto auto auto;
   grid-row: auto auto auto;
-  margin: 3%; }
+  margin: 3%;
+}
 
 .tarjeta {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   display: block;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 1%;
   border-style: solid;
-  font-family: Ubuntu;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
   font-weight: bolder;
   text-align: center;
   line-height: 30px;
-  background-color: #ced4dac5;
+  background-color: rgba(206, 212, 218, 0.7725490196);
   font-size: 20px;
-  width: 90%; }
+  width: 90%;
+}
 
 .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 
 .recetasDos {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
-  place-content: center; }
+  place-content: center;
+}
 
 /* --- Contacto ---*/
 .mapa {
   display: grid;
   grid-template-columns: 50% 50%;
-  font-family: Ubuntu;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
   font-weight: bolder;
   text-align: end;
   line-height: 30px;
   font-size: 27px;
-  margin: 2%; }
+  margin: 2%;
+}
 
 .mapaDos {
-  margin-left: 10%; }
+  margin-left: 10%;
+}
 
 .mapa p {
   border-style: solid;
   border-color: black;
   padding: 2%;
   margin-left: 20%;
-  background-color: #ced4dac5; }
+  background-color: rgba(206, 212, 218, 0.7725490196);
+}
 
 .tituloContacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  font-family: Ubuntu;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
   font-weight: bolder;
   margin-top: 5%;
@@ -178,15 +233,21 @@ footer {
   margin-bottom: 1%;
   padding: 1%;
   border-style: solid;
-  border-color: black; }
+  border-color: black;
+}
 
 .subtituloContacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 1%;
-  justify-content: center;
-  font-family: Ubuntu;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
-  font-weight: 900; }
+  font-weight: 900;
+}
 
 .tablaDeContacto {
   display: grid;
@@ -194,107 +255,229 @@ footer {
   margin-right: 20%;
   padding-top: 1%;
   padding-bottom: 1%;
-  font-family:Ubuntu;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
   font-weight: bolder;
-  justify-content: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 
 .empresaNombre {
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+}
 
 .primerNombre {
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+}
 
 .correoTelefono {
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+}
 
 .direccion {
-  margin-bottom: 1%; }
+  margin-bottom: 1%;
+}
 
 .enviar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: end; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
 
 /* --- Nuestros Productos --- */
+.subtituloEspecias {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 3%;
+  font-family: "Ubuntu", sans-serif;
+  border: solid black;
+  background-color: rgba(206, 212, 218, 0.7725490196);
+  padding: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.subtituloEspecias h2 {
+  text-align: center;
+  font-weight: 900;
+}
+.subtituloEspecias h3 {
+  text-indent: 20px;
+  line-height: 35px;
+}
+.subtituloEspecias img {
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.productosEspeciasTubo {
+  border-style: solid;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 2%;
+  padding: 1%;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 900;
+}
+
 .table {
-  font-family: Ubuntu;
+  font-family: "Ubuntu", sans-serif;
   font-style: italic;
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 /* --- Inicio de Responsive --- */
 /* --- Responsive - Celular ---*/
 @media screen and (max-width: 768px) {
   body {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+  }
   header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .logo {
     width: 10%;
-    height: 10%; }
+    height: 10%;
+  }
   /* --- Index --- */
   .cuadro {
     width: 80%;
     margin-top: 1%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     place-items: center;
     margin-left: 10%;
-    margin-top: 5%; }
+    margin-top: 5%;
+  }
   .carousel {
     height: 10%;
     width: 80%;
     margin-top: 10%;
     margin-bottom: 10%;
-    transform: translateX(1%); }
+    -webkit-transform: translateX(1%);
+            transform: translateX(1%);
+  }
   /* --- Recetas --- */
   .cuerpoTarjeta {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    margin-left: 10%; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 10%;
+  }
   /* --- Recetas - Pagina 02 --- */
   .recetasDos {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; } }
-
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 /*--- Responsive - Tablet --- */
 @media screen and (min-width: 769px) and (max-width: 1020px) {
   header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; }
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   body {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+  }
   .logo {
     width: 10%;
-    height: 10%; }
+    height: 10%;
+  }
   /* --- Index --- */
   .cuadro {
     width: 80%;
     margin-top: 1%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     place-items: center;
     margin-left: 10%;
-    margin-top: 5%; }
+    margin-top: 5%;
+  }
   .carousel {
     height: 10%;
     width: 80%;
     margin-top: 10%;
     margin-bottom: 10%;
-    transform: translateX(1%); }
+    -webkit-transform: translateX(1%);
+            transform: translateX(1%);
+  }
   /* --- Recetas --- */
   .cuerpoTarjeta {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    margin-left: 10%; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 10%;
+  }
   /* --- Recetas - Pagina 02 --- */
   .recetasDos {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; } }
-
-/* --- Fin del Responsive --- */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+/* --- Fin del Responsive --- *//*# sourceMappingURL=style.css.map */
