--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,23 @@ header .nav-item {
   border-style: solid;
   border-color: black;
   border-radius: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+}
+header .nav-item:hover, header .hvr-grow:focus, header .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .btn_wsp {
@@ -343,6 +360,22 @@ footer {
   font-family: "Ubuntu", sans-serif;
   font-style: italic;
   font-weight: bolder;
+}
+
+/* --- Nuestros Productos --- */
+.nuestrosClientes {
+  display: grid;
+  grid-template-columns: 20% 20% 20%;
+  grid-template-rows: auto auto auto;
+  margin: 3%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Ubuntu", sans-serif;
+}
+.nuestrosClientes .card-title {
+  text-align: center;
+  font-weight: 900;
 }
 
 /* --- Inicio de Responsive --- */
