--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,8 +40,21 @@ header{
         border-style: solid;
         border-color:black;
         border-radius: 10px;
+        display: inline-block;
+        vertical-align: middle;
+        -webkit-transform: perspective(1px) translateZ(0);
+        transform: perspective(1px) translateZ(0);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-property: transform;
+        transition-property: transform;
+      }
+      .nav-item:hover, .hvr-grow:focus, .hvr-grow:active {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+      }
     }
-}
 .btn_wsp{
     position: fixed;
     width: 55px;
@@ -267,7 +280,20 @@ footer{
     font-weight:bolder;
 }
 
+/* --- Nuestros Productos --- */
 
+.nuestrosClientes{
+    display: grid;
+    grid-template-columns: 20% 20% 20%;
+    grid-template-rows: auto auto auto;
+    margin:3%;
+    justify-content: center;
+    font-family: $tipografia-alternativa;
+        .card-title{
+            text-align: center;
+            font-weight: 900 ;
+        }
+}
 /* --- Inicio de Responsive --- */
 
 /* --- Responsive - Celular ---*/
