--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,15 @@
 /* --- Variables --- */
 
-$color-primario: #f0aa40d3 ;
-$color-secundario: #ced4dac5 ;
-$color-texto: black ;
-
-$tipografia-general: 'Arimo', sans-serif; /* font-family: 'Arimo', sans-serif; */
-$tipografia-alternativa: 'Ubuntu', sans-serif; /* font-family: 'Ubuntu', sans-serif; */
+/* --- Maps --- */
+$fuente:(
+    principal: 'Arimo', sans-serif,
+    general: 'Ubuntu', sans-serif
+);
+$tamaño:(
+    titulo: 700,
+    parrafos: 400
+);
+$color:(
+    principal: #f0aa40d3 ,
+    cuadros: #ced4dac5,
+);
