--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Arimo&family=Ubuntu&display=swap"); /* --- Variables --- */
+@import url("https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Ubuntu&display=swap");
+/* font-family: 'Arimo', sans-seri; */
+/* font-family: 'Ubuntu', sans-serif; */
 * {
   margin: 0;
   padding: 0;
@@ -113,7 +115,7 @@ footer {
   margin-bottom: 2%;
   padding: 1%;
   font-family: "Arimo", sans-serif;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .cuadro {
@@ -222,6 +224,11 @@ footer {
   padding: 2%;
   margin-left: 20%;
   background-color: rgba(206, 212, 218, 0.7725490196);
+}
+
+.tituloContacto {
+  font-style: italic;
+  margin-top: 5%;
 }
 
 .subtituloContacto {
