--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,6 +1,16 @@
+@mixin bordeTitulos {
+    display: flex;
+    justify-content: space-between;
+    border-style: solid ;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 2%;
+    padding: 1%;
+}
+
 @mixin grid-cards {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
     margin: 3%;
 }
