Se agrego map-get en Index

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,8 @@ $color-texto: black ;
 
 $tipografia-general: 'Arimo', sans-serif; /* font-family: 'Arimo', sans-seri; */
 $tipografia-alternativa: 'Ubuntu', sans-serif; /* font-family: 'Ubuntu', sans-serif; */
+
+$color:(
+    principal: #f0aa40d3,
+    cuadros: #ced4dac5
+)
