--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ footer {
 .cuerpoTarjeta {
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
   margin: 3%;
 }
 
@@ -326,8 +325,7 @@ footer {
 /* --- Nuestros Productos --- */
 .nuestrosClientes {
   display: grid;
-  grid-template-columns: 20% 20% 20%;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: auto auto auto;
   margin: 3%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -370,6 +368,8 @@ footer {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
+    margin-top: 8%;
+    margin-bottom: 8%;
   }
   /* --- Index --- */
   .cuadro {
@@ -387,12 +387,7 @@ footer {
     margin-top: 5%;
   }
   .carousel {
-    height: 10%;
-    width: 80%;
-    margin-top: 10%;
-    margin-bottom: 10%;
-    -webkit-transform: translateX(1%);
-            transform: translateX(1%);
+    display: none;
   }
   /* --- Recetas --- */
   .cuerpoTarjeta {
@@ -403,7 +398,9 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-left: 10%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   /* --- Recetas - Pagina 02 --- */
   .recetasDos {
@@ -416,6 +413,15 @@ footer {
             flex-direction: column;
   }
 }
+/* --- Nuestros Clientes --- */
+.nuestrosClientes {
+  display: grid;
+  grid-template-columns: auto;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+/* --- Contacto --- */
 /*--- Responsive - Tablet --- */
 @media screen and (min-width: 769px) and (max-width: 1020px) {
   header nav ul {
@@ -475,6 +481,53 @@ footer {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  /* --- Recetas --- */
+  .cuerpoTarjeta {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 10%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  /* --- Recetas - Pagina 02 --- */
+  .recetasDos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  /* --- Nuestros Clientes --- */
+  .nuestrosClientes {
+    display: grid;
+    grid-template-columns: auto auto;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+@media screen and (min-width: 1021px) and (max-width: 1300px) {
+  /* --- Nuestros Clientes --- */
+  .nuestrosClientes {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   /* --- Recetas --- */
   .cuerpoTarjeta {
@@ -487,15 +540,18 @@ footer {
             flex-direction: column;
     margin-left: 10%;
   }
-  /* --- Recetas - Pagina 02 --- */
-  .recetasDos {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+}
+@media screen and (min-width: 1301px) {
+  /* --- Nuestros Clientes --- */
+  .nuestrosClientes {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 }
 /* --- Fin del Responsive --- *//*# sourceMappingURL=style.css.map */
