--- a/css/style.css
+++ b/css/style.css
@@ -19,17 +19,8 @@ ul {
 body {
   background-image: url(../img/background.png);
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   min-height: 100vh;
 }
 
@@ -182,6 +173,9 @@ footer {
   background-color: rgba(206, 212, 218, 0.7725490196);
   font-size: 20px;
   width: 90%;
+}
+.tarjeta img {
+  margin: 2%;
 }
 
 .pagination {
