--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,12 +18,8 @@ ul {
 body{
     background-image: url(../img/background.png);
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
 }
 header{
@@ -142,6 +138,9 @@ footer{
     background-color: $color-secundario;
     font-size: 20px;
     width: 90%;
+        img{
+            margin: 2%;
+        }
 }
 .pagination{
     display: flex;
