Camios en Nuestros Productos html, se agregaron especias e icono

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,15 @@ footer {
   font-weight: bolder;
 }
 
+.icon-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 /* --- Nuestros Productos --- */
 .nuestrosClientes {
   display: grid;
